_docs/v0.61/embedding/eajs/snippets/MetabaseDashboardAttributes.md
---
version: v0.61
has_magic_breadcrumbs: true
show_category_breadcrumb: true
show_title_breadcrumb: true
category: Embedding
title: MetabaseDashboardAttributes
source_url: 'https://github.com/metabase/metabase/blob/master/docs/embedding/eajs/snippets/MetabaseDashboardAttributes.md'
layout: new-docs
---

Attributes for the `<metabase-dashboard>` web component.

Embeds a Metabase dashboard. Provide either `dashboard-id` (for SSO embeds)
or `token` (for guest embeds), plus optional display configuration.

## Properties

<!-- [<snippet properties>] -->

| Property                                                         | Type                 | Description                                                                                                                                                                                                                                            |
| :--------------------------------------------------------------- | :------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| <a id="auto-refresh-interval"></a> `auto-refresh-interval`       | `number`             | Auto-refresh interval in seconds. For example, `60` refreshes the dashboard every 60 seconds.<br>---<br>Optional<br>Available in Pro/Enterprise and Guest embed.                                                                                       |
| <a id="custom-context"></a> `custom-context`                     | `string`             | Optional custom context string passed through to the guest token endpoint.<br>---<br>Optional<br>Available in Guest embed.                                                                                                                             |
| <a id="dashboard-id"></a> `dashboard-id`                         | `string` \| `number` | The ID of the dashboard to embed. Can be a regular ID or an [entity ID](/docs/latest/installation-and-operation/serialization#entity-ids-work-with-embedding). Only for SSO embeds — guest embeds set the ID with `token`.     |
| <a id="drills"></a> `drills`                                     | `boolean`            | Whether to enable drill-through on the dashboard.<br>---<br>Optional<br>Default: `true`<br>Available in Pro/Enterprise.                                                                                                                                |
| <a id="enable-entity-navigation"></a> `enable-entity-navigation` | `boolean`            | Whether to enable internal entity navigation (links to dashboards/questions). Requires `drills` to be `true`<br>---<br>Optional<br>Default: `false`<br>Available in Pro/Enterprise.                                                                    |
| <a id="hidden-parameters"></a> `hidden-parameters`               | `string`[]           | List of filter names to hide from the dashboard, e.g. `['productId']`.<br>---<br>Optional<br>Available in Pro/Enterprise.                                                                                                                              |
| <a id="initial-parameters"></a> `initial-parameters`             | `object`             | Default values for dashboard filters, e.g. `{ 'productId': '42' }`.<br>---<br>Optional<br>Available in Pro/Enterprise and Guest embed.                                                                                                                 |
| <a id="token"></a> `token`                                       | `string`             | The token for guest embeds. Set automatically by the guest embed flow.<br>---<br>Optional<br>Available in Guest embed.                                                                                                                                 |
| <a id="with-downloads"></a> `with-downloads`                     | `boolean`            | Whether to show the button to download the dashboard as PDF and download question results.<br>---<br>Optional<br>Default: `true` on OSS/Starter, `false` on Pro/Enterprise<br>Available in Guest embed.                                                |
| <a id="with-subscriptions"></a> `with-subscriptions`             | `boolean`            | Whether to let people set up [dashboard subscriptions](/docs/latest/dashboards/subscriptions). Subscriptions sent from embedded dashboards exclude links to Metabase items.<br>---<br>Optional<br>Available in Pro/Enterprise. |
| <a id="with-title"></a> `with-title`                             | `boolean`            | Whether to show the dashboard title in the embed.<br>---<br>Optional<br>Default: `true`<br>Available in Guest embed.                                                                                                                                   |

<!-- [<endsnippet properties>] -->
